# events-backend

./: .env  Makefile  README.md  alembic.ini  backend.dockerfile  pyproject.toml
app/: app.py
app/api/: __init__.py  events.py  root.py  users.py
app/db/: __init__.py  connection.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2e2a4ec650a9_add_models_relation.py  4b7b4073a959_add_status_to_event.py  835911d23acc_datetime_to_date.py  99b1fe3b7437_add_models.py  d8beabcb2a3f_add_datetime_to_event.py
app/settings/: __init__.py  local.py
docker-compose/: services.yml
